build: GET endpoint and client fetch.

--- a/client/index.html
+++ b/client/index.html
@@ -10,12 +10,15 @@
 <body>
     <form id="user-form">
         <label for="name"></label>
-        <input id="name" name="name" type="text" placeholder="Name" required>
+        <input id="formName" name="name" type="text" placeholder="Name" required />
         <br>
         <label for="message"></label>
-        <textarea id="message" name="message" rows="4" cols="30" placeholder="Message" required></textarea>
+        <textarea id="formMessage" name="message" rows="4" cols="30" placeholder="Message" required></textarea>
         <br>
         <button type="submit">Submit</button>
     </form>
+    <message id="messageBoard">
+        <h2 id="messageBoardTitle">Message Board</h2>
+    </message>
 </body>
 </html>
