feat: audio functional

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <title>Week-04</title>
 </head>
 <body>
+    <audio id="audio" src="./media/background-music-443623.mp3" loop></audio>
     <form id="user-form">
         <label for="name"></label>
         <input id="formName" name="name" type="text" placeholder="Name" required />
